<resources>
    <string name="app_name">Room</string>
    <string name="idLivro">Id:</string>
    <string name="cadastrar_livro">Cadastrar Livro</string>
    <string name="cancelar">cancelar</string>
    <string name="confirmar">confirmar</string>
    <string name="ano">Ano: </string>
    <string name="titulo">Titulo</string>
    <string name="autor">Autor</string>
    <string name="nota">Nota</string>
    <string name="tituloo">Titulo:</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="filme">Filme</string>
    <string name="listar_livros">listar livros</string>
    <string name="quantidade">Quantidade:</string>
    <string name="livros_recycle">livros recycle</string>
    <string name="page_adapter">Page Adapter</string>
</resources>
